# loom-local-mcp-server

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/plans/: 2025-12-12-loom-agent-design.md  2025-12-12-loom-agent-implementation.md
scripts/: setup.sh
src/loom_agent/: __init__.py  __main__.py  extractor.py  fetcher.py  models.py  server.py  transcriber.py
tests/: test_extractor.py  test_fetcher.py  test_integration.py  test_models.py  test_server.py  test_transcriber.py
